# Harness-Engineering-a-Language-Model

./: AGENTS.md  README.md  pyproject.toml  requirement.md  train.py
.github/workflows/: ci.yml
artifacts/issue18/: generated_story.txt  run_summary.json  training_log.json
configs/milestone1/: openwebtext.json  tinystories.json  train_tinystories.json
docs/: milestone-1-review-runbook.md  milestone-1-setup.md
docs/design/: program-design.md
src/small_scale_llm/: __init__.py
src/small_scale_llm/checkpointing/: __init__.py  model.py  optimizer.py
src/small_scale_llm/data/: __init__.py  openwebtext.py  tinystories.py
src/small_scale_llm/generation/: __init__.py  api.py
src/small_scale_llm/model/: __init__.py  attention.py  embeddings.py  feedforward.py  loss.py  normalization.py  transformer.py
src/small_scale_llm/optim/: __init__.py  adamw.py
src/small_scale_llm/tokenizer/: __init__.py  bpe_training.py  runtime.py
src/small_scale_llm/training/: __init__.py  entrypoint.py  step.py
tests/: __init__.py
tests/integration/: __init__.py  run_issue18_single_gpu.py  run_issue48_ci_smoke.py
tests/unit/: __init__.py  test_package_smoke.py
tests/unit/checkpointing/: __init__.py  test_model_checkpoint.py  test_optimizer_checkpoint.py
tests/unit/data/: __init__.py  test_openwebtext.py  test_tinystories.py
tests/unit/generation/: __init__.py  test_api.py
tests/unit/model/: __init__.py  test_attention.py  test_embeddings.py  test_feedforward.py  test_loss.py  test_transformer.py
tests/unit/optim/: __init__.py  test_adamw.py
(+5 files in other folders)
