[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "small-scale-llm-training-framework"
version = "0.1.0"
description = "Milestone 1 scaffold for a small-scale LLM training framework."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
