[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "small-scale-llm-training-framework"
version = "0.1.0"
description = "Milestone 1 scaffold for a small-scale LLM training framework."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
